--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "needs-translation",
   "version": "1.0.0",
-  "description": "A configurable translations diff and exclusion tool for XLIFF 1.2."
+  "description": "A configurable translations diff and exclusion tool for XLIFF 1.2 designed for Xcode localization exports.",
   "license": "GPL-3.0",
-  "dependencies": {
+  "dependencies":
+  {
     "rxjs": "^5.5.6",
     "xliff": "^2.3.0"
   }
